# GBFR_modtools

./: .gitattributes  .gitignore  01_minfo转Hash表.bat  02_Hash表提取纹理.bat  CMakeLists.txt  CMakePresets.json  CPP编辑器构建与迁移.md  CPP编辑器目标与架构.md  GBFR_Extractor.ps1  GBFR_WorkspaceBuilder.ps1  GBFR提取工具.bat  GBFR编辑封包工具.bat  README.md  SOP骨骼后处理与Deform骨.md  _step1_parse_mmat.ps1  _step2_extract_tex.ps1  build.bat  explore_char.ps1  extract_all_helper.bat  模型与骨架Mod制作流程.md
_lib/: MMat_ModelMaterial.fbs  builder_strings_zh.json  explore_strings_zh.json  humanoid_bone_names.json  launch_workspace_builder.vbs  sop_operations_zh.json  workspace_lib.ps1
_references/GBFRBlenderTools-v2.0.0/: __init__.py
_references/GBFRBlenderTools-v2.0.0/Entities/: Bone.py  BoneInfo.py  ModelSkeleton.py  Quaternion.py  Vec3.py
assets/shaders/: preview.hlsl
cmake/: CMakeLists.txt  CMakePresets.json
docs/: README.md  工作区与格式说明.md  构建与开发.md  架构.md  模型与骨架Mod制作流程.md  模型骨架预览与材质问题记录.md
docs/formats/: Blender导出对照.md  SOP骨骼后处理与Deform骨.md
explore/: explore_char.ps1  fix-encoding.ps1  strings_zh.json  探索角色资源.bat
explore/explore_output/: pl1400_manifest.md
include/gbfr/core/: log.hpp  workspace.hpp
include/gbfr/formats/: animation.hpp  cloth.hpp  material.hpp  model.hpp  sop.hpp
include/gbfr/render/: d3d11_context.hpp  preview_renderer.hpp
scripts/: bootstrap_tools.ps1
scripts/research/: extract_pl_portraits.ps1
scripts/workspace/: explore_char.ps1  sop_report.ps1  workspace_lib.ps1
src/gbfr_core/: CMakeLists.txt
src/gbfr_core/src/: log.cpp  workspace.cpp
src/gbfr_editor/: CMakeLists.txt
src/gbfr_editor/src/: main.cpp  sop_inspector.cpp  sop_inspector.hpp  texture_gallery.cpp  texture_gallery.hpp
src/gbfr_formats/: CMakeLists.txt
src/gbfr_formats/src/: animation.cpp  cloth.cpp  material.cpp  model.cpp  placeholder.cpp  sop.cpp
src/gbfr_render/: CMakeLists.txt
src/gbfr_render/src/: d3d11_context.cpp  preview_animation.cpp  preview_gpu_types.hpp  preview_renderer.cpp
tests/: CMakeLists.txt  test_smoke.cpp
